fixed alignement issue by introducinng a padded column class

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 }
 
 .full-width {
+	clear: both;
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
@@ -29,7 +30,11 @@
 }
 
 .row {
-	min-width: 90% !important;
+	min-width: 100% !important;
+}
+
+.padded {
+	padding: 0px 30px;
 }
 
 h1 {
@@ -61,17 +66,47 @@ h2 {
 	background-color: #BF0A0D;
 }
 
+h3 {
+	font-family: 'Nexa Bold';
+	font-size: 18px;
+}
+
+.white-subhead {
+	color: white;
+}
+
+.blue-subhead {
+	color: #1E2528;
+}
+
+.main-content {
+	background-color: white;
+	color: #1E2528;
+	font-family: 'Lato';
+	font-size: 14px;
+}
+
+.content img {
+	/*border: solid 1px #1E2528;*/
+	box-shadow: 6px 6px 0px -1px #E6E1C2;
+	margin: 10px 0px;
+}
 
 /**
 * Navigation
 **/
-nav {
-	max-height: 120px;
+#hamburger {
+	float: right;
+	margin: 45px 0;
 }
 
-nav ul {
-	padding-top: 40px;
+#top-nav {
+	min-height: 100px;
+}
+
+#top-nav ul {
 	float: right;
+	margin: 45px 0;
 }
 
 nav a {
@@ -82,33 +117,34 @@ nav a:hover {
 	color: #BF0A0D;
 }
 
-nav ul li {
+#top-nav ul li {
 	display: inline;
 	font-family: 'Nexa Bold';
 	font-size: 18px;
 	list-style: none;
-	margin-left: 30px;
+	position: relative;
 	text-transform: uppercase;
 }
 
 #logo {
 	margin-top: 10px;
+	position: absolute;
 }
 
+#bruh {
+	background-color: #6D9788;
+}
 /**
 * Sidebar
 **/
-aside {
+#sidebar-container {
 	background-color: #6D9788;
-	float: left;
-	height: 1500px;
 }
 /**
 * Billboards
 **/
 .billboard {
 	clear: both;
-	min-height: 750px;
 }
 
 .cta {
@@ -117,7 +153,7 @@ aside {
 
 .overlay {
 	background-color: rgba(30, 37, 40, 0.5);
-	height:  100%;
+	height: 100%;
 	padding: 50px 0px;
 	width: 100%;
 }
@@ -138,7 +174,13 @@ aside {
 /**
 * Footer
 **/
-
 footer {
+	color: white;
+	background-color:	#1E2528;
 	clear: both;
+	min-height: 100px;
+}
+
+footer  p {
+	margin-top: 35px;
 }
